--- a/plugins/network-elements/juniper-contrail/test/resources/log4j.properties
+++ b/plugins/network-elements/juniper-contrail/test/resources/log4j.properties
@@ -25,7 +25,7 @@ log4j.appender.rolling=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.rolling.layout=org.apache.log4j.PatternLayout
 log4j.appender.rolling.layout.ConversionPattern=%d %-5p [%c{3}] (%t:%x) %m%n
 log4j.appender.rolling.file.threshold=DEBUG
-log4j.appender.rolling.File=./logs/testclient.log
+log4j.appender.rolling.File=./target/logs/testclient.log
 log4j.appender.rolling.DatePattern='.'yyy-MM-dd
 log4j.appender.rolling.file.append=false
 log4j.category.org.apache=INFO, rolling, stdout
